Angular Flex added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,9 @@
   </nav>
   <div class="content-container">
     <div class="content-area">
-      Content
+      <div fxLayout="row" fxLayoutAlign="space-between center">
+        Content
+      </div>
     </div>
     <nav class="sidenav">
       SideNav
