--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,25 @@
   <div class="alert alert-app-level" *ngIf="true">
     App Level
   </div>
-  <header class="header header-6">
-    Header
+  <header class="header-6">
+    <div class="branding">
+      .
+    </div>
+    <div class="header-nav">
+      <a href="javascript://" class="active nav-link nav-text"
+        >Dashboard</a
+      >
+      <a href="javascript://" class="nav-link nav-text">Route X</a>
+    </div>
+    <div class="header-actions">
+      <a
+        href="javascript://"
+        class="nav-link nav-icon"
+        aria-label="settings"
+      >
+        <clr-icon shape="cog"></clr-icon>
+      </a>
+    </div>
   </header>
   <nav class="subnav">
     Subnav
@@ -14,7 +31,7 @@
         Content
       </div>
     </div>
-    <nav class="sidenav">
+    <nav class="sidenav" [clr-nav-level]="2">
       SideNav
     </nav>
   </div>
